scrollbar fix

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -180,6 +180,11 @@ main {
   }
 }
 
+// Scrollbar
+html {
+  overflow-y: scroll;
+}
+
 @include for-laptop-screen-up {
   .app-container {
     width: 96vw;
